# TranslationApp

./: .gitignore  README.md  config.json  pyproject.toml  requirements.txt
translation_app/: __init__.py  __main__.py  pipeline.py  shared.py
translation_app/asr/: __init__.py  whisper.py
translation_app/audio/: __init__.py  vad.py
translation_app/translate/: __init__.py  hymt.py  ollama_correct.py
translation_app/tts/: __init__.py  engine.py
translation_app/web/: __init__.py  __main__.py  server.py
translation_app/web/static/: app.js  index.html  style.css
