[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "example_pkg"
version = "0.1.0"
description = "Example Python package"
readme = "README.md"
requires-python = "==3.11.*"
license = { text = "MIT" }
authors = [
  { name = "yuqiang", email = "783025817@qq.com" }
]

dependencies = [
  "requests>=2.31.0"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "build",
  "twine"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
